...
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="62dp"
        android:gravity="center"
        android:text="0 mph"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/EndWalkButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distanceTextView" />

    <TextView
        android:id="@+id/distanceTextView"
        android:layout_width="149dp"
...
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/holo_red_light"
        android:text="end walk/run"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WalkRunHeader"
        app:layout_constraintVertical_bias="0.888" />
...
